# advent-of-code

./: .gitignore  README.md  create-data.sh
code/2015/python/src/: __init__.py  day_1.py
code/2019/python/nb/: Advent of Code 2019.ipynb
code/2019/python/src/: day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py
code/2020/python/: README.md  launch.py  requirements.txt
code/2020/python/nb/: Advent of Code 2020 1-5.ipynb  Advent of Code 2020 11-15.ipynb  Advent of Code 2020 6-10.ipynb
code/2020/python/src/: __init__.py  day_1.py  day_10.py  day_11.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
code/2020/python/test/: __init__.py  test_day_1.py  test_day_10.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  (+4 more)
code/2021/js/: package.json
code/2021/python/: README.md  launch.py  pytest.ini  requirements-nb.txt  requirements.txt  setup.py
code/2022/python/: README.md  pyproject.toml
code/2022/python/ac2022python/: __main__.py  cli.py
code/2022/python/ac2022python/solutions/: __init__.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
code/2022/python/tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py
code/2023/python/: pyproject.toml
code/2023/python/ac2023python/: day_1_trebuchet.py  day_2_cube_conundrum.py  day_3_gear_ratios.py  day_4_scratchcards.py  day_5_seed_fertilizer.py  settings.py
code/2023/python/tests/: test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py
(+44 files in other folders)
